namespace TodoBackend.Models
{
    public enum Priority
    {
        Low,
        Medium,
        High
    }
}
